--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ go:
 before_install:
     - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
     - tar -zxvf protobuf-2.6.1.tar.gz
-    - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && make install
+    - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
     - protoc --go_out=. protocol/hologram.proto
 
 install:
