--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ go:
   - tip
 
 before_install:
-    - wget https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
-    - tar -zxvf protobuf-2.6.1.tar.gz
-    - cd protobuf-2.6.1 && ./configure --prefix=/usr && make && sudo make install
-    - protoc --go_out=. protocol/hologram.proto
+    - wget --quiet https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
+    - tar -zxf protobuf-2.6.1.tar.gz
+    - cd protobuf-2.6.1 && ./configure --prefix=/usr > /dev/null && make > /dev/null && sudo make install > /dev/null && cd ..
+    - protoc --go_out=. protocol/hologram.proto > /dev/null
 
 install:
     - go get golang.org/x/crypto/ssh/...
