--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - tar -zxf protobuf-2.6.1.tar.gz
   - cd protobuf-2.6.1 && ./configure --prefix=/usr > /dev/null && make > /dev/null && sudo make install > /dev/null && cd ..
   - go get code.google.com/p/goprotobuf/proto
+  - export PATH="$HOME/gopath/bin:$PATH"
   - protoc --go_out=. protocol/hologram.proto > /dev/null
 
 install:
