--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ before_install:
   - wget --quiet https://github.com/google/protobuf/releases/download/v2.6.1/protobuf-2.6.1.tar.gz
   - tar -zxf protobuf-2.6.1.tar.gz
   - cd protobuf-2.6.1 && ./configure --prefix=/usr > /dev/null && make > /dev/null && sudo make install > /dev/null && cd ..
-  - go get code.google.com/p/goprotobuf/proto
+  - go get code.google.com/p/goprotobuf/protoc-gen-go
   - export PATH="$HOME/gopath/bin:$PATH"
   - protoc --go_out=. protocol/hologram.proto > /dev/null
 
 install:
+  - go get code.google.com/p/goprotobuf/proto
   - go get golang.org/x/crypto/ssh/...
   - go get github.com/mitchellh/go-homedir
   - go get github.com/smartystreets/goconvey/...
