--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ before_install:
   - tar -zxf protobuf-2.6.1.tar.gz
   - cd protobuf-2.6.1 && ./configure --prefix=/usr > /dev/null && make > /dev/null && sudo make install > /dev/null && cd ..
   - go get code.google.com/p/goprotobuf/protoc-gen-go
+  - go get github.com/jteeuwen/go-bindata/...
   - export PATH="$HOME/gopath/bin:$PATH"
   - protoc --go_out=. protocol/hologram.proto > /dev/null
+  - cd agent && go-bindata -pkg agent test_ssh_key && cd ..
+  - cd transport/remote && go-bindata -pkg remote self-signed-ca.cert self-signed.cert self-signed.key && cd ..
 
 install:
   - go get code.google.com/p/goprotobuf/proto
