Getting gpm right, take 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
   - tip
 
 install:
-  - git clone https://github.com/pote/gpm.git && cd gpm && ./configure && bin/gpm install
+  - git clone https://github.com/pote/gpm.git && cd gpm && ./configure
+  - gpm/bin/gpm install
 
 script: go test -v ./...
