Using onbuild to generate base image

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:8.0
 RUN apt-get update && apt-get install rsyslog ca-certificates -y
 COPY objects/hologram-server.deb /tmp/hologram-server.deb
 RUN dpkg -i /tmp/hologram-server.deb
-COPY objects/server.json /etc/hologram/server.json
+ONBUILD COPY config.json /etc/hologram/server.json
 
 COPY start.sh /start.sh
 
