Updated com.adroll.hologram-me.plist and com.adroll.hologram.plist to reference the new path in /usr/local/bin

--- a/agent/support/darwin/com.adroll.hologram.plist
+++ b/agent/support/darwin/com.adroll.hologram.plist
@@ -8,7 +8,7 @@
   <true/>
   <key>ProgramArguments</key>
   <array>
-    <string>/usr/bin/hologram-agent</string>
+    <string>/usr/local/bin/hologram-agent</string>
   </array>
   <key>StandardOutPath</key>
   <string>/var/log/hologram.log</string>
