--- a/agent/support/darwin/com.adroll.hologram-me.plist
+++ b/agent/support/darwin/com.adroll.hologram-me.plist
@@ -8,7 +8,7 @@
   <false/>
   <key>ProgramArguments</key>
   <array>
-    <string>/usr/bin/hologram-boot</string>
+    <string>/usr/local/bin/hologram-boot</string>
   </array>
   <key>RunAtLoad</key>
   <true/>
